--- a/assets/styles/adaptive.css
+++ b/assets/styles/adaptive.css
@@ -252,10 +252,12 @@
     }
 
     .text {
+        margin-top: 100px;
         font-size: 36px;
     }
 
     .brands {
+        margin-top: 32px;
         display: grid;
         grid-template-columns: repeat(2, 0.1fr);
         grid-template-rows: repeat(8, 0.1fr);
